MB-50333: Move OutstandingItemsResult::hcs to new struct

We need to expand the state in OutstandingItemsResult for Disk
checkpoints in a future change so move the hcs value to a new struct
in preparation for that.

Change-Id: I43b4d3960403d9a9757bb0910118ecdad8c9d603
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/168616
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>